# Tucil1_13522122

./: README.md
src/: CMakeLists.txt  main  main.cpp
src/Data-Structure/: data-structure.cpp  data-structure.hpp
src/IO/: io.cpp  io.hpp
src/Solver/: solver.cpp  solver.hpp
src/Utils/: utils.cpp  utils.hpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/solver/: solver.cpp
test/: test-1.txt  test-2.txt  test-3.txt  test-4.txt  test-5.txt  test-6.txt
test/output/: test-1.txt  test-2.txt  test-3.txt  test-6.txt
